configures project to use JUnit 5 and assertJ.